--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:24.2.1'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 
 }
